src/guestfs-actions.h

extern int guestfs_aug_close (guestfs_h *handle);
extern int guestfs_aug_defvar (guestfs_h *handle, const char *name, const char *expr);
extern int guestfs_aug_set (guestfs_h *handle, const char *path, const char *val);
extern int guestfs_aug_insert (guestfs_h *handle, const char *path, const char *label, int before);
extern int guestfs_aug_rm (guestfs_h *handle, const char *path);
extern int guestfs_aug_mv (guestfs_h *handle, const char *src, const char *dest);
extern int guestfs_aug_save (guestfs_h *handle);
extern int guestfs_aug_load (guestfs_h *handle);
extern int guestfs_rm (guestfs_h *handle, const char *path);
extern int guestfs_rmdir (guestfs_h *handle, const char *path);
extern int guestfs_rm_rf (guestfs_h *handle, const char *path);
extern int guestfs_mkdir (guestfs_h *handle, const char *path);
extern int guestfs_mkdir_p (guestfs_h *handle, const char *path);
extern int guestfs_chmod (guestfs_h *handle, int mode, const char *path);
extern int guestfs_chown (guestfs_h *handle, int owner, int group, const char *path);
extern int guestfs_pvcreate (guestfs_h *handle, const char *device);
extern int guestfs_vgcreate (guestfs_h *handle, const char *volgroup, char * const* const physvols);
extern int guestfs_lvcreate (guestfs_h *handle, const char *logvol, const char *volgroup, int mbytes);
extern int guestfs_mkfs (guestfs_h *handle, const char *fstype, const char *device);
extern int guestfs_sfdisk (guestfs_h *handle, const char *device, int cyls, int heads, int sectors, char * const* const lines);
extern int guestfs_write_file (guestfs_h *handle, const char *path, const char *content, int size);
extern int guestfs_umount (guestfs_h *handle, const char *pathordevice);
extern int guestfs_umount_all (guestfs_h *handle);
extern int guestfs_lvm_remove_all (guestfs_h *handle);
extern int guestfs_blockdev_setro (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_setrw (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_getss (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_getbsz (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_setbsz (guestfs_h *handle, const char *device, int blocksize);
extern int64_t guestfs_blockdev_getsz (guestfs_h *handle, const char *device);
extern int64_t guestfs_blockdev_getsize64 (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_flushbufs (guestfs_h *handle, const char *device);
extern int guestfs_blockdev_rereadpt (guestfs_h *handle, const char *device);